rust/parser-calc/src/snapshots/calc_fragments@assigns.calc.snap
---
source: rust/parser-calc/src/lib.rs
assertion_line: 133
expression: resource_info
input_file: fixtures/fragments/calc/assigns.calc

---
{
  "resource": {
    "type": "Code",
    "path": "fragments/calc/assigns.calc",
    "id": "",
    "kind": "SoftwareSourceCode",
    "language": "Calc"
  },
  "relations": [
    [
      {
        "type": "Assign",
        "range": [
          0,
          0,
          0,
          1
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/calc/assigns.calc",
        "name": "a",
        "kind": "Number"
      }
    ],
    [
      {
        "type": "Assign",
        "range": [
          1,
          0,
          1,
          1
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/calc/assigns.calc",
        "name": "b",
        "kind": "Number"
      }
    ],
    [
      {
        "type": "Assign",
        "range": [
          2,
          0,
          2,
          1
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/calc/assigns.calc",
        "name": "c",
        "kind": "Number"
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          2,
          4,
          2,
          5
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/calc/assigns.calc",
        "name": "a",
        "kind": "Number"
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          2,
          8,
          2,
          9
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/calc/assigns.calc",
        "name": "b",
        "kind": "Number"
      }
    ],
    [
      {
        "type": "Assign",
        "range": [
          3,
          3,
          3,
          40
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/calc/assigns.calc",
        "name": "with_preceding_spaces_and_underscores",
        "kind": "Number"
      }
    ],
    [
      {
        "type": "Assign",
        "range": [
          4,
          0,
          4,
          11
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/calc/assigns.calc",
        "name": "d",
        "kind": "Number"
      }
    ]
  ],
  "autorun": "Needed",
  "compile_digest": "OvJmrdRlHnsDShMj_Kgp2ot0Mfss7R9Lh7XaG1x9IT4.ZOtX12nWE_Isur_1tWMQ0bW_24T1iUIccit9RZAivoQ..0"
}
