rust/parser-calc/src/snapshots/calc_fragments@tags.calc.snap
---
source: rust/parser-calc/src/lib.rs
expression: resource_info
input_file: fixtures/fragments/calc/tags.calc

---
{
  "resource": {
    "type": "Code",
    "path": "fragments/calc/tags.calc",
    "id": "",
    "kind": "SoftwareSourceCode",
    "language": "Calc"
  },
  "relations": [
    [
      {
        "type": "Assign",
        "range": [
          0,
          0,
          0,
          19
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/calc/tags.calc",
        "name": "var1",
        "kind": "Number"
      }
    ],
    [
      {
        "type": "Use",
        "range": [
          1,
          0,
          1,
          11
        ]
      },
      {
        "type": "Symbol",
        "path": "fragments/calc/tags.calc",
        "name": "var2",
        "kind": "Number"
      }
    ]
  ],
  "self_digest": "da157ea96acaaba5922c57271929d8c96eaf4ecbdaa8b9b04bcf9266cdfa8eb9",
  "pure": false
}
